# feedstocks

./: .gitignore  Get-MSVC.ps1  LICENSE  README.md  activate.sh  conda_build_config.yaml  get_msvc.py  pixi.toml  variants.yaml
7max/: 0001-always-o2.patch  build.bat  recipe.yaml
7zz/: 0001-always-o2.patch  0002-7max.patch  bld.bat  build.bat  build.sh  recipe.yaml
akelpad/: 0001-customize.patch  CMakeLists.txt  bld.bat  build.bat  build.sh  recipe.yaml
aria2/: 0001-customize.patch  bld.bat  build.bat  build.sh  recipe.yaml
aria2-toolchain/: bld.bat  build.bat  build.sh  post-link.bat  recipe.yaml
autohotkey/: 0001-conda-build.patch  build.bat  changes.patch  recipe.yaml
cmd/: build.bat  recipe.yaml
crates-io-proxy/: 0001-customize.patch  recipe.yaml
everything-cli/: 0001-conda-build.patch  0001-windows-7-support.patch  build.bat  changes.patch  recipe.yaml
ffdec/: changes.patch  recipe.yaml
ffmpeg/: 0001-customize.patch  bld.bat  build.bat  build.sh  changes.patch  recipe.yaml
jerryscript/: 0001-conda-build.patch  0001-missing-includes.patch  0002-enable-lto.patch  bld.bat  build.bat  build.sh  recipe.yaml
klaus-full/: _klaus_full.py  build.bat  klaus.cmd  recipe.yaml
libcmd/: 0001-cmd.dll.patch  build.bat  cmd.h  recipe.yaml
libgit2/: build.bat  changes.patch  recipe.yaml
libplacebo/: changes.patch  recipe.yaml
micromamba/: 0001-conda-build.patch  build.bat  recipe.yaml
nginx/: 0001-conda-build.patch  bld.bat  build.sh  recipe.yaml
nodejs-bin/: node.cmd  recipe.yaml
nsudodm/: 0001-conda-build.patch  0001-latest-msvc-compat.patch  build.bat  nsudodm_activate.ps1  nsudodm_deactivate.ps1  recipe.yaml
openconsole/: 0001-conda-build.patch  build.bat  recipe.yaml
openssh/: 0001-conda-build.patch  0002-customize.patch  build.bat  openssh_activate-win.bat  openssh_activate-win.ps1  openssh_deactivate-win.bat  openssh_deactivate-win.ps1  recipe.yaml
pdftk/: build.bat  build.sh  pdftk  pdftk.cmd  recipe.yaml
pixi/: 0001-conda-build.patch  0001-customize.patch  0001-strip-dquotes.patch  build.bat  build.sh  changes.patch  recipe.yaml
pixi-build-backends/: 0001-conda-build.patch  0001-customize.patch  0001-pixi.patch  0001-uv.patch  build.bat  build.sh  recipe.yaml
pixi-build-rattler-build/: changes.patch  recipe.yaml
pixi-install-to-prefix/: 0001-customize.patch  build.bat  build.sh  changes.patch  recipe.yaml
poisson-etest/: 0001-pytest.patch  recipe.yaml
powershell/: build.ps1  recipe.yaml
rattler-build/: 0001-customize.patch  recipe.yaml
rattler-cli/: recipe.yaml  (+1 more)
voidimageviewer/: 0001-conda-build.patch  CMakeLists.txt  build.bat  recipe.yaml
(+56 files in other folders)
